<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EquipoSelected">


    <TextView
        android:id="@+id/tvCiudadEquipoSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ciudadE"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvEstadioEquipoSelected"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/tvNombreEquipoSelected" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/tvNombreEquipoSelected"
        app:layout_constraintGuide_percent="0.27"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivEquipoSelected"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars[3]" />

    <TextView
        android:id="@+id/tvNombreEquipoSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombreE"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvCiudadEquipoSelected"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.80300957"
        app:layout_constraintTop_toBottomOf="@+id/tvAforoEquipoSelected" />

    <TextView
        android:id="@+id/tvEstadioEquipoSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estadioE"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvAforoEquipoSelected"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/tvCiudadEquipoSelected" />

    <TextView
        android:id="@+id/tvAforoEquipoSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aforoE"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/tvEstadioEquipoSelected" />

    <Button
        android:id="@+id/btBorrarEquipoSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/borrarSelectedE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btEditarEquipoSelected"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <Button
        android:id="@+id/btEditarEquipoSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editarSelectedE"
        app:layout_constraintBottom_toBottomOf="@+id/btBorrarEquipoSelected"
        app:layout_constraintEnd_toStartOf="@+id/btBorrarEquipoSelected"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btBorrarEquipoSelected"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btVerJugadoresSelected"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/verJugadoresSelected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04379562" />
</androidx.constraintlayout.widget.ConstraintLayout>